selecting nodes displays correctly  now, use chips for observation list, can remove items from obs list, add cutoff to how many are displayed in obs list, fix square sizes from legends

--- a/projects/web-mev/src/app/d3/components/hcl/hcl.component.scss
+++ b/projects/web-mev/src/app/d3/components/hcl/hcl.component.scss
@@ -90,9 +90,8 @@ mat-card {
 .sample-list {
   padding: 15px 0;
 }
-
-.sample-list__item:not(:last-child):after {
-  content: ', ';
+.sampleChips {
+  font-size: 10px;
 }
 
 .status-txt {
@@ -108,5 +107,13 @@ mat-card {
 }
 
 .toogleGroup{
-  margin-left: 30px;
+  margin: 0 0 10px 0;
+}
+.toggleHeader{
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.saveObsBtn{
+  margin-top: 10px;
 }
